# ArknightsAutoOperator

./: .gitignore  .prettierignore  .prettierrc.mjs  README.md  aao.spec  app.go  go.mod  go.sum  interface.json  main.go  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vite.config.js  wails.json
.github/workflows/: _build.yml  check.yml  package-check.yml  release.yml
aao/: __init__.py  app.py  config.py  types.py
aao/core/: afa.py  afa_hotkey.py  avatar.py
aao/core/battle/: action.py
aao/core/geometry/: convert_pos.py  map_loader.py  view.py
aao/core/timing/: __init__.py  battle_state.py  calibration.py  tick.py  time_source.py
aao/measure/: __init__.py  api_server.py  overlay.py  run.py  worker.py
aao/resources/: __init__.py  syncer.py  updater.py
aao/timeline/: editor_window.py  io.py  model.py
aao/ui/: __init__.py  about_page.py  background.py  calibration_page.py  changelog_dialog.py  collapsible_box.py  farm_page.py  farm_worker.py  floating_log_window.py  floating_state.py  log_handler.py  map_picker.py  runtime.py  scrollbar_style.py  settings_page.py  theme.py  timeline_canvas.py  toggle_switch.py  tray.py  window_snap.py
aao/utils/: __init__.py  jsonc.py  logger.py  runtime_paths.py  secure_store.py
agent/: main.py
agent/utils/: __init__.py  logger.py  runtime_paths.py
custom/: __init__.py  agent.py  app.py  config.py  main.py  outcome.py  registry.py  update.py
custom/action/: executor.py  key_press.py
custom/core/: __init__.py  afa_hotkey.py  avatar.py
custom/core/battle/: __init__.py  action.py  game_time.py
custom/core/geometry/: __init__.py  convert_pos.py  map_loader.py  view.py
custom/core/timing/: calibration.py  precise_sleep.py  tick.py  time_source.py
custom/maa/: __init__.py  agent.py  farm.py  registry.py  run.py
custom/maa/action/: __init__.py  executor.py  key_press.py
custom/maa/reco/: click_stage.py
custom/measure/: api_server.py  overlay.py  run.py  worker.py
custom/reco/: __init__.py  click_stage.py
custom/resources/: syncer.py  updater.py
custom/timeline/: __init__.py  editor_window.py  io.py  model.py
custom/utils/: __init__.py
data/: level_codes.json  operator_mapping.json  operator_names.json
docs/: rewrite-plan.md
examples/: sample_1-7.json
examples/timelines/: sample_1-7.json
frontend/: index.html
frontend/src/: App.vue
resource/base/: README.md  default_pipeline.json
resource/base/pipeline/: execute.json  farm.json  reco.json
tasks/: farm.json
tests/: test_battle_state.py  test_battle_state_screenshots.py  test_calibration.py  test_controller.go  test_convert_pos.py  test_timing.py  test_win32_configurable.go
tests/replay/: replay.py  test_replay.py
tests/replay/cases/: README.md
tests/replay/cases/负费/: calibration.json  expected.json
tests/replay/cases/边界周期/: calibration.json  expected.json
tools/: configure.py  screencap.py  sync-schema.mjs  validate-schema.mjs
typings/maa/: __init__.pyi  agent_client.pyi  buffer.pyi  context.pyi  controller.pyi  custom_action.pyi  custom_recognition.pyi  define.pyi  event_sink.pyi  job.pyi  library.pyi  pipeline.pyi  resource.pyi  tasker.pyi  toolkit.pyi
typings/maa/agent/: __init__.pyi  agent_server.pyi
