[project]
name = "arknights-auto-operator"
version = "0.1.0"
description = "明日方舟自动凹图 — MaaFramework 方案二 (pipeline + 进程内 custom action) + 费用条计时/悬浮窗/打轴对轴"
requires-python = ">=3.13,<3.14"
dependencies = [
    "maafw>=0.0.0",
    "opencv-python>=4.10",
    "numpy>=2.0",
    "PySide6>=6.7",
    "websockets>=13.0",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["agent"]
extraPaths = ["agent"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
