[project]
name = "arknights-auto-operator"
version = "0.1.0"
description = "明日方舟自动凹图 — MaaFramework 方案二 (pipeline + 进程内 custom action) + 费用条计时/悬浮窗/打轴对轴"
requires-python = ">=3.13,<3.14"
dependencies = [
    "maafw>=5.11,<6",
    "numpy>=2.0",
    "PySide6>=6.7",
    "websockets>=13.0",
    "pillow>=10.0",
    "json5>=0.14.0",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.0",
    "pyinstaller>=6.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom", "aao"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["custom", "aao", "tests", "tools"]
extraPaths = ["custom", "aao", "tests", "tests/replay"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

# strict 下关闭因 maafw 第三方库存根缺失导致的类型未知噪音
# （reportMissingTypeStubs / reportUnknown* / reportMissingTypeArgument），
# 保留 strict 的其余实质检查（privateUsage / unnecessaryComparison / unusedFunction 等）。
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"

# tests: 访问 protected 成员 + 解构未使用变量是测试常见模式
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"
reportUnusedVariable = "none"

# tools: 工具脚本允许访问 protected 成员 + 解构未使用变量
[[tool.pyright.executionEnvironments]]
root = "tools"
reportPrivateUsage = "none"
reportUnusedVariable = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

